--- a/style.css
+++ b/style.css
@@ -5,17 +5,17 @@
 }
 
 header{
-    background-color:#bf5f39 ;
+    background-color:whitesmoke;
     padding:20px;
 }
 header > h1{
-    color:#e9f2f1;
+    color:#0a0121;
     text-align: center;
     font-size:bold;
 }
 
 body{
-    background-color:#21024a;
+    background-color:#110226;
     color:white;
 }
 
@@ -48,4 +48,10 @@ body{
     top: 40px;
     right:-32px;
     padding: 2px 10px;
+}
+
+.result{
+    font-size: 40px;
+    text-align: center;
+    color:aqua;
 }
