--- a/style.css
+++ b/style.css
@@ -69,4 +69,11 @@ i{
     border: 4px solid white;
     border-radius: 50%;
     padding:20px ;
+    transition: all 0.3s ease;
+}
+
+i:hover{
+    cursor: pointer;
+    background-color: red;
+    
 }
