--- a/style.css
+++ b/style.css
@@ -67,13 +67,13 @@ i{
     color:#f5d15d;
     margin: 0 20px;
     border: 4px solid white;
-    border-radius: 50%;
+    border-radius: 49%;
     padding:20px ;
     transition: all 0.3s ease;
 }
 
 i:hover{
     cursor: pointer;
-    background-color: red;
+    background-color: #030045;
     
 }
