--- a/style.css
+++ b/style.css
@@ -95,6 +95,6 @@ i:hover{
 }
 
 .draw{
-    border: 4px solid #adaaaa;
-    box-shadow:0 0 10px #7d7a7a ;
+    border: 4px solid #636060;
+    box-shadow:0 0 10px #4a4646 ;
 }
